--- a/style.css
+++ b/style.css
@@ -259,7 +259,8 @@ header{
   padding: 15px;
   background: var(--container-color);
   border-radius: 0.4rem;
-  transition: .5s all cubic-bezier(0.075, 0.82, 0.165, 1)
+  transition: .5s all cubic-bezier(0.075, 0.82, 0.165, 1);
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 .services-box:hover{
   transform: scale(1.05);
