--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body{
   background: var(--main-color);
   padding: 12px 16px;
   border-radius: 0.4rem;
-  margin-top: 1rem
+  margin-top: 1rem;
 }
 .btn i{
   font-size: 1.2rem
@@ -234,13 +234,15 @@ header{
   margin: 0 0 1.5rem
 }
 .about-text p{
-  font-size: 0.938rem;
+  font-size: 18px;
   letter-spacing: 1px;
   text-align: justify;
-  margin-bottom: 1.5rem
+  margin-bottom: 1.5rem;
+  font-family: var(--texto)
 }
 .about-img img{
-  border-radius: 0.5rem
+  border-radius: 0.5rem;
+  width: 80%
 }
 .about-img{
   text-align: center;
@@ -249,6 +251,7 @@ header{
 .services-content{
   display: grid;
   grid-template-columns: repeat(2,1fr);
+  grid-template-rows: repeat(2,1fr);
   gap: 2rem
 }
 .services-box{
@@ -261,6 +264,15 @@ header{
   border-radius: 0.4rem;
   transition: .5s all cubic-bezier(0.075, 0.82, 0.165, 1);
   box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+}
+.box1{
+  grid-area: 1 / 1 / 2 / 2;
+}
+.box2{
+  grid-area: 1 / 2 / 2 / 3;
+}
+.box3{
+  grid-area: 2 / 1 / 3 / 3;
 }
 .services-box:hover{
   transform: scale(1.05);
@@ -280,7 +292,8 @@ header{
   color: var(--main-color)
 }
 .services-box p{
-  font-size: 0.9rem
+  font-size: 0.9rem;
+  text-align: justify;
 }
 /*Portfólio*/
 .portfolio-content{
@@ -418,9 +431,9 @@ header{
     width: 90%
   }
   .about-img img{
-    height: 100%;
+    height: 100%; width: 100%;
     object-fit: cover;
-    object-position: left;
+    object-position: center;
   }
 }
 @media (max-width: 892px){
@@ -442,7 +455,10 @@ header{
   .about-img img{
     height: 400px;
     object-fit: cover;
-    object-position: left top;
+    object-position: 50% 15%;
+  }
+  .about-text h2{
+    margin-top: 24px
   }
 }
 @media (max-width: 775px){
@@ -521,12 +537,20 @@ header{
 }
 @media (max-width: 500px){
   .services-content{
-    grid-template-columns: repeat(1,1fr)
+    grid-template-columns: repeat(1,100%);
+    display: flex;
+    flex-direction: column;
+  }
+  .about-text h2{
+    font-size: 1.5rem
   }
 }
 @media (max-width: 471px){
  .home-text h2{
    font-size: 2rem
+ }
+ .portfolio ul{
+   display: block;
  }
 }
 @media (max-width: 450px){
